--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <h2>About</h2>
            <div class="wrapper">
-               <div class="bingkai reveal"><img src="image/key black.jpg" alt="surya"></div>
+               <div class="bingkai reveal"><img src="image/profilBlack.jpg" alt="surya profile img"></div>
                <div class="teks-about reveal">
                    <h3>Hello, i m surya sura</h3>
                    <p>welcome to my personal website.
@@ -149,14 +149,14 @@
     <div class="container">
         <h2>Galery</h2>
         <div class="gambar">
-            <img src="image/1 (1).jpg" alt="" class="jumbo reveal" width="100%" height="auto">
+            <img src="image/jumbo.jpg" alt="galeri big" class="jumbo reveal" width="100%" height="auto">
             <div class="thumbnail reveal">
-                <img src="image/1 (2).jpg" alt="" class="thumb">
-                <img src="image/1 (3).jpg" alt="" class="thumb">
-                <img src="image/1 (4).jpg" alt="" class="thumb">
-                <img src="image/1 (5).jpg" alt="" class="thumb">
-                <img src="image/1 (6).jpg" alt="" class="thumb">
-                <img src="image/1.jpg" alt="" class="thumb">
+                <img src="image/thumbnail (1).jpg" alt="thumbnail 1" class="thumb">
+                <img src="image/thumbnail (2).jpg" alt="thumbnail 2" class="thumb">
+                <img src="image/thumbnail (3).jpg" alt="thumbnail 3" class="thumb">
+                <img src="image/thumbnail (4).jpg" alt="thumbnail 4" class="thumb">
+                <img src="image/thumbnail (5).jpg" alt="thumbnail 5" class="thumb">
+                <img src="image/thumbnail (6).jpg" alt="thumbnail 6" class="thumb">
 
             </div>
         </div>
