--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <h2>About</h2>
            <div class="wrapper">
-               <div class="bingkai reveal"><img src="image/profilBlack.jpg" alt="surya profile img"></div>
+               <div class="bingkai reveal"><img src="Image/profilBlack.jpg" alt="surya profile img"></div>
                <div class="teks-about reveal">
                    <h3>Hello, i m surya sura</h3>
                    <p>welcome to my personal website.
