--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
         <div class="gambar">
             <img src="image/jumbo.jpg" alt="galeri big" class="jumbo reveal" width="100%" height="auto">
             <div class="thumbnail reveal">
-                <img src=" Image/thumbnail (1).jpg" alt="thumbnail 1" class="thumb">
-                <img src=" Image/thumbnail (2).jpg" alt="thumbnail 2" class="thumb">
-                <img src=" Image/thumbnail (3).jpg" alt="thumbnail 3" class="thumb">
-                <img src=" Image/thumbnail (4).jpg" alt="thumbnail 4" class="thumb">
-                <img src=" Image/thumbnail (5).jpg" alt="thumbnail 5" class="thumb">
-                <img src=" Image/thumbnail (6).jpg" alt="thumbnail 6" class="thumb">
+                <img src="Image/thumbnail (1).jpg" alt="thumb1" class="thumb">
+                <img src="Image/thumbnail (2).jpg" alt="thumb2" class="thumb">
+                <img src="Image/thumbnail (3).jpg" alt="thumb3" class="thumb">
+                <img src="Image/thumbnail (4).jpg" alt="thumb4" class="thumb">
+                <img src="Image/thumbnail (5).jpg" alt="thumb5" class="thumb">
+                <img src="Image/thumbnail (6).jpg" alt="thumb6" class="thumb">
 
             </div>
         </div>
