--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="container">
         <h2>Galery</h2>
         <div class="gambar">
-            <img src="image/jumbo.jpg" alt="galeri big" class="jumbo reveal" width="100%" height="auto">
+            <img src="Image/jumbo.jpg" alt="galeri big" class="jumbo reveal" width="100%" height="auto">
             <div class="thumbnail reveal">
                 <img src="Image/thumbnail (1).jpg" alt="thumb1" class="thumb">
                 <img src="Image/thumbnail (2).jpg" alt="thumb2" class="thumb">
