--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <div class="banners-content">
             <div class="teks-1">Hi! i am</div>
             <div class="teks-2">Surya Gusti Sura</div>
-            <div class="teks-3">i am <span class="efek-ngetik"></span> </div>
+            <div class="teks-3">i am <span class="efek-ngetik"></span></div>
+
             <form action="">
                 <input type="button" name="buttonCV" value="Download CV">
             </form>
@@ -106,6 +107,7 @@
 <section id="Blogs">
     <div class="container">
         <h2>Blogs</h2>
+        <span>Hire my shots biograafi</span>
         <div class="kontent">
                 <div class="cards reveal">
                     <img src="Image/blog (2).jpg" alt="tongkonan" height="270px">
