--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surya | personal blog</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" >
-    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/fontawesome-free-5.15.4-web/css/all.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 
@@ -55,7 +53,7 @@
     <div class="container">
         <h2>About</h2>
            <div class="wrapper">
-               <div class="bingkai"><img src="Image/surya blackWhite.jpg" alt="surya"></div>
+               <div class="bingkai"><img src="Image/bw 2.jpg" alt="surya"></div>
                <div class="teks-about reveal">
                    <h3>Hello, i m surya sura</h3>
                    <p>welcome to my personal website.
