--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <img src="Image/blog (2).jpg" alt="tongkonan" height="270px">
                     <h3>sejarah Rumah adat "Tongkonan" Tana Toraja</h3>
                     <p>Rumah adat Tongkonan merupakan salah satu rumah tradisional masyarakat Toraja Provinsi Sulawesi Selatan. </p>
-                    <p class="writer">by : <small>Surya Sura</small> | 1 weak ago</p>
+                    <p class="writer">by : <small>Surya Sura</small> | 5 nov 2021</p>
                     <a href="blog/blog_1.html">
                         <input type="button" name="buttonArticle" value="Read more >">
                     </a>
@@ -121,7 +121,7 @@
                     <img src="Image/blog (1).jpg" alt="agriculture" height="270px">
                     <h3>inovasi Pertanian berbasis teknologi IoT</h3>
                     <p>Penerapan Internet of Thing (IoT) pada pertanian dapat berupa teknologi sensor untuk penggunaan air, sensor untuk mendeteksi serangan hama, dan juga sensor yang mengetahui emisi lingkungan.</p>
-                    <p class="writer">by : <small>Surya Sura</small> | 2 month ago</p>
+                    <p class="writer">by : <small>Surya Sura</small> | 10 nov 2021</p>
                     <a href="blog/blog_2.html">
                         <input type="button" name="buttonArticle" value="Read more >">
                     </a>
@@ -131,7 +131,7 @@
                     <img src="Image/blog.jpg" alt="" height="270px">
                     <h3>alasan mengapa kamu harus belajar programing</h3>
                     <p>Menguasai pemrograman dapat mewujudkan ide anda menjadi kenyataan, seperti merancang sebuah program, membuat website dan bahkan aplikasi.</p>
-                    <p class="writer">by : <small>Surya Sura</small> | 3 weak ago</p>
+                    <p class="writer">by : <small>Surya Sura</small> | 15 nov 2021</p>
                     <a href="blog/blog_3.html">
                         <input type="button" name="buttonArticle" value="Read more >">
                     </a>
