--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 <section id="Blogs">
     <div class="container">
         <h2>Blogs</h2>
-        <span>Hire my shots biograafi</span>
         <div class="kontent">
                 <div class="cards reveal">
                     <img src="Image/blog (2).jpg" alt="tongkonan" height="270px">
@@ -193,7 +192,7 @@
   <!--footers-->
   <footer>
     <div class="container">
-        <small>copyright &copy; 2021 - Surya Gusti Sura. All right reservered.</small>
+        <small>copyright &copy; 2021 - Surya Gusti Sura. <br> all rights reserved</small>
 </footer>
     </div>
 
