ubah style baground

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <img src="Image/blog (2).jpg" alt="tongkonan" height="270px">
                     <h3>sejarah Rumah adat "Tongkonan" Tana Toraja</h3>
                     <p>Rumah adat Tongkonan merupakan salah satu rumah tradisional masyarakat Toraja Provinsi Sulawesi Selatan. </p>
-                    <p class="writer">by : <small>Surya Sura</small> | 5 nov 2021</p>
+                    <p class="writer"><small class="fas fa-pen-alt"> Surya Sura</small> <small class="far fa-calendar-alt"> 10 nov 2021</small>  <small class="far fa-comment"> 30 comment</small></p>
                     <a href="blog/blog_1.html">
                         <input type="button" name="buttonArticle" value="Read more >">
                     </a>
@@ -120,8 +120,7 @@
                     <img src="Image/blog (1).jpg" alt="agriculture" height="270px">
                     <h3>inovasi Pertanian berbasis teknologi IoT</h3>
                     <p>Penerapan Internet of Thing (IoT) pada pertanian dapat berupa teknologi sensor untuk penggunaan air, sensor untuk mendeteksi serangan hama, dan juga sensor yang mengetahui emisi lingkungan.</p>
-                    <p class="writer">by : <small>Surya Sura</small> | 10 nov 2021</p>
-                    <a href="blog/blog_2.html">
+                    <p class="writer"><small class="fas fa-pen-alt"> Surya Sura</small> <small class="far fa-calendar-alt"> 5 nov 2021</small>  <small class="far fa-comment"> 10 comment</small></p>
                         <input type="button" name="buttonArticle" value="Read more >">
                     </a>
                 </div>
@@ -130,7 +129,7 @@
                     <img src="Image/blog.jpg" alt="" height="270px">
                     <h3>alasan mengapa kamu harus belajar programing</h3>
                     <p>Menguasai pemrograman dapat mewujudkan ide anda menjadi kenyataan, seperti merancang sebuah program, membuat website dan bahkan aplikasi.</p>
-                    <p class="writer">by : <small>Surya Sura</small> | 15 nov 2021</p>
+                    <p class="writer"><small class="fas fa-pen-alt"> Surya Sura</small> <small class="far fa-calendar-alt"> 15 nov 2021</small>  <small class="far fa-comment"> 25 comment</small></p>
                     <a href="blog/blog_3.html">
                         <input type="button" name="buttonArticle" value="Read more >">
                     </a>
@@ -148,7 +147,7 @@
     <div class="container">
         <h2>Galery</h2>
         <div class="gambar">
-            <img src="Image/jumbo.jpg" alt="galeri big" class="jumbo reveal" width="100%" height="auto">
+            <img src="Image/thumbnail (2).jpg" alt="galeri big" class="jumbo reveal" width="100%" height="auto">
             <div class="thumbnail reveal">
                 <img src="Image/thumbnail (1).jpg" alt="thumb1" class="thumb">
                 <img src="Image/thumbnail (2).jpg" alt="thumb2" class="thumb">
@@ -156,6 +155,9 @@
                 <img src="Image/thumbnail (4).jpg" alt="thumb4" class="thumb">
                 <img src="Image/thumbnail (5).jpg" alt="thumb5" class="thumb">
                 <img src="Image/thumbnail (6).jpg" alt="thumb6" class="thumb">
+                <img src="Image/thumbnail.JPG" alt="thumb6" class="thumb">
+                <img src="Image/thumbnail (7).jpg" alt="thumb6" class="thumb">
+
 
             </div>
         </div>
