--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="banners-content">
             <div class="teks-1">Hi! i am</div>
             <div class="teks-2">Surya Gusti Sura</div>
-            <div class="teks-3">i am <span class="efek-ngetik"></span></div>
+            <div class="teks-3">i am a <span class="efek-ngetik"></span></div>
 
             <form action="">
                 <input type="button" name="buttonCV" value="Download CV">
@@ -53,11 +53,10 @@
     <div class="container">
         <h2>About</h2>
            <div class="wrapper">
-               <div class="bingkai"><img src="Image/bw 2.jpg" alt="surya"></div>
+               <div class="bingkai"><img src="Image/xx.png" alt="surya"></div>
                <div class="teks-about reveal">
                    <h3>Hello, i m surya sura</h3>
-                   <p>welcome to my personal website.
-                    My full name is Surya Gusti Sura, you can call me Surya. I come from Tana Toraja, South Sulawesi. I am currently pursuing a bachelor's degree at the Faculty of Agriculture, Sam Ratulangi University, majoring in Agricultural Technology, Agricultural Engineering Study Program. currently in the fifth semester. </p> 
+                   <p>welcome to my personal website. My full name is Surya Gusti Sura, you can call me Surya. I come from Tana Toraja, South Sulawesi. I am currently pursuing a bachelor's degree at the Faculty of Agriculture, Sam Ratulangi University, majoring in Agricultural Technology, Agricultural Engineering Study Program. currently in the fifth semester. </p> 
                    <p>This website is my practice website in creating my first website just using HTML, CSS and Javascript to become a website developer. so maybe there is still a lot that needs to be improved again.</p>
                    <a href="about/About_me.html">
                     <input type="button" name="button" value="SEE MORE > ">
