--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
             <div class="teks-2">Surya Gusti Sura</div>
             <div class="teks-3">i am a <span class="efek-ngetik"></span></div>
 
-            <form action="">
-                <input type="button" name="buttonCV" value="Download CV">
-            </form>
+            <a href="cv.pdf" download> <input type="button" name="buttonCV" value="Download CV"> </a>
             <div class="icon-subs">
                     <a href="https://web.facebook.com/profile.php?id=100008710784614"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.instagram.com/suryasura_/"><i class="fab fa-instagram"></i></a>   
