--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
         <h2>About</h2>
            <div class="wrapper">
-               <div class="bingkai"><img src="Image/xx.png" alt="surya"></div>
+               <div class="bingkai"><img src="Image/img-profil.jpg" alt="surya"></div>
                <div class="teks-about reveal">
                    <h3>Hello, i m surya sura</h3>
                    <p>welcome to my personal website. My full name is Surya Gusti Sura, you can call me Surya. I come from Tana Toraja, South Sulawesi. I am currently pursuing a bachelor's degree at the Faculty of Agriculture, Sam Ratulangi University, majoring in Agricultural Technology, Agricultural Engineering Study Program. currently in the fifth semester. </p> 
