--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <div class="content">
                 <div class="card reveal">
                     <div class="ikon">
-                        <i class="fas fa-tractor"></i>
+                        <i class="fas fa-seedling"></i>
                     </div>
                     <div class="info">
                         <h3>agricultural consultant</h3>
-                        <p>Agricultural Cultivation Consultant, agricultural planning and agricultural technology.</p>
+                        <p>Agricultural Consultant for agricultural planning and agricultural technology.</p>
                     </div>
                 </div>
                 <div class="card reveal">
@@ -83,16 +83,16 @@
                     </div>
                     <div class="info">
                         <h3>Web Programing</h3>
-                        <p>creating website-based programs, designing websites, developing websites,busines website and ecomerce.</p>
+                        <p>create website-based programs, designing websites, developing websites.</p>
                     </div>
                 </div>
                 <div class="card reveal">
                     <div class="ikon">
-                        <i class="fas fa-palette"></i>
+                        <i class="fas fa-mobile-alt"></i>
                     </div>
                     <div class="info">
-                        <h3>Editing</h3>
-                        <p>photo editing, banner design, template design, logo design, brochures and photo printing.</p>
+                        <h3>Mobile Aplication</h3>
+                        <p>create applications for Smartphone, Tablet, and other (Mobile) devices.</p>
                     </div>
                 </div>
             </div>
